# arca

./: .clangd  .gitignore  .gitmodules  Cargo.toml  DATAPIPE.md  PROTOCOL.md  README.md  addblob.fix  hello.list  justfile  notes.txt  run.sh  rustc-ice-2025-12-01T22_38_21-621892.txt
.cargo/: config.toml
.github/workflows/: compile.yml
apps/: Makefile  hello.c  rlimit.c
arca/: Cargo.toml
arca/src/: blob.rs  datatype.rs  entry.rs  function.rs  lib.rs  null.rs  page.rs  runtime.rs  serde.rs  table.rs  tuple.rs  value.rs  word.rs
arcade/: Cargo.toml  build.rs  foo.c
arcade/src/: dev.rs  fileutil.rs  input_gen.rs  main.rs  ninep.rs  proc.rs  proto.rs  record.rs  tcpserver.rs  tcputil.rs  testing.rs  vfs.rs  vsock.rs
arcade/src/ninep/: wire.rs
arcade/src/proc/: env.rs  file.rs  namespace.rs  table.rs
arcade/src/vfs/: dev.rs  fs.rs  mem.rs  path.rs  vsock.rs
arcade/tests/: testing.rs
arcane/: Cargo.toml  a.h  build.rs
arcane/src/: lib.rs
common/: Cargo.toml
common/src/: arrayvec.rs  bitpack.rs  buddy.rs  controlreg.rs  elfloader.rs  ipaddr.rs  lib.rs  message.rs  mmap.rs  pipe.rs  protocol.rs  refcnt.rs  ringbuffer.rs  sendable.rs  sync_stream.rs  util.rs  vhost.rs
common/src/buddy/: tests.rs
common/src/message/: control.rs  frame_codec.rs  traits.rs
common/src/pipe/: Pipe.md  bi.rs  bidirectional_pipe.rs  error.rs  file_pipe.rs  pipe_type.rs  ring.rs  ring_consumer.rs  ring_producer.rs  shared_memory_region.rs  traits.rs  uni.rs
common/src/protocol/: control.rs  file.rs  listener.rs  stream.rs
common/src/util/: channel.rs  concurrent_trie.rs  descriptors.rs  initcell.rs  mutex.rs  oneshot.rs  router.rs  rwlock.rs  semaphore.rs  sorter.rs  spinlock.rs
control/src/: message.rs  protocol.rs
data-pipe/src/: async_stream.rs  sync_stream.rs
defs/: Cargo.toml  build.rs  syscall.h
defs/arca/: defs.h  syscall.h
defs/src/: lib.rs  syscall.S  syscall.c
fix/: Cargo.toml  build.rs
fix/.cargo/: config.toml
fix/etc/: memmap.ld
fix/evaluator/: Cargo.toml  README.md  add_script.txt  apply_script.txt  eval_script.txt  trade_script.txt
fix/evaluator/src/: fixruntime.rs  hybridruntime.rs  lexer.rs  lib.rs  main.rs  memoryruntime.rs  mockruntime.rs  parser.rs  storageruntime.rs  testevaluator.rs  vmmruntime.rs
fix/fix-shell/: bindings.h  fix.c  fix.h  handle.h  main.c  math.h  runtime.c  runtime.h  start.S  wasm-rt-impl.c  wasm-rt-impl.h  wasm-rt.h
fix/handle/: Cargo.toml
fix/handle/src/: lib.rs  rawhandle.rs
fix/runtime/: Cargo.toml
fix/runtime/src/: bottom.rs  common.rs  data.rs  evaluator.rs  fixruntime.rs  lib.rs  runtime.rs  storage.rs
fix/shell/: Cargo.toml  build.rs
fix/shell/etc/: memmap.ld  wasm-rt.c
fix/shell/inc/: wasm-rt.h
fix/shell/src/: fixpoint.rs  lib.rs  rt.rs  runtime.rs  shell.rs
fix/src/: evaluator.rs  lib.rs  main.rs  parser.rs  runtime.rs  storage.rs
fix/src/handle/: handle.rs  mod.rs  rawhandle.rs
fix/src/parser/: lexer.rs  parser.rs  token.rs
fix/src/runtime/: arca.rs
fix/src/storage/: memory.rs
fix/wasm/: addblob.wat  coupon.wat
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/etc/: memmap.ld
kernel/examples/: hello.rs  simd.rs  threads.rs  webserver.rs  webserver2.rs
kernel/src/: acpi.rs  allocator.rs  aprofile.rs  arca.rs  arca_pipe.rs  arrayvec.rs  buddy.rs  client.rs  cls.rs  control_pipe.rs  cpu.rs  cpuinfo.rs  cswitch.S  debugcon.rs  doorbell.rs  gdt.rs  host.rs  idt.rs  initcell.rs  interrupts.S  interrupts.rs  io.rs  iprofile.rs  kthread.rs  kvmclock.rs  lapic.rs  lib.rs  main.rs  msr.rs  multiboot-start.asm  multiboot.rs  page.rs  paging.rs  parser.rs  pipe.rs  prelude.rs  profile.rs  refcnt.rs  registers.rs  rsstart.rs  (+14 more)
kernel/src/kthread/: kmutex.rs
kernel/src/paging/: descriptor.rs  impossible.rs
kernel/src/tests/: test_avx.rs  test_kernel_types.rs  test_serde.rs
kernel/src/types/: arca.rs  atom.rs  blob.rs  error.rs  exception.rs  function.rs  lambda.rs  null.rs  page.rs  pagetable.rs  runtime.rs  table.rs  thunk.rs  tree.rs  tuple.rs  value.rs  word.rs
kernel/src/types/arca/: xstate.rs
kernel/src/types/function/: syscall.rs
kernel/src/types/thunk/: concrete.rs  syscall.rs
kernel/src/virtio/: virtqueue.rs  vsock.rs
kernel/src/virtio/virtqueue/: avail.rs  desc.rs  idx.rs  used.rs  vring.rs
kernel/src/virtio/vsock/: addr.rs  driver.rs  flow.rs  header.rs  listener.rs  message.rs  stream.rs
loader/: .gitignore  Cargo.toml  Makefile  acpi.c  build.rs  i686-unknown-none.json  kmalloc.c  loader.c  loader.h  long_mode.S  memmap.ld  serial.c  start.S  string.c  trampoline.S  util.c
loader/etc/: memmap.ld
loader/inc/: loader.h  table.h
loader/src/: acpi.c  cstart.c  kmalloc.c  loader.c  long_mode.S  main.rs  serial.c  start.S  string.c  trampoline.S  util.c
macros/: Cargo.toml
macros/src/: bitpack.rs  core_local.rs  lib.rs  testing.rs  util.rs
memcached/: Cargo.toml  build.rs
memcached/src/: error.rs  kvstore.rs  main.rs  proto.rs  shared.rs  start.S
memfs/: Cargo.toml
memfs/src/: integration.rs  lib.rs  memfs.rs
monitor/src/: lib.rs  relay.rs
monitor/tests/: end_to_end.rs
ninep/: Cargo.toml
ninep/src/: client.rs  dir.rs  file.rs  lib.rs  msg.rs  node.rs  path.rs  server.rs  types.rs  wire.rs
ninep/src/client/: dir.rs  file.rs  node.rs
pipe/src/: traits.rs
runner/: Cargo.toml
thumbnail-example/: Cargo.toml
thumbnail-example/etc/: memmap.ld
thumbnail-example/src/: main.rs
user/: Cargo.toml  build.rs
user/etc/: memmap.ld
user/src/: buffer.rs  error.rs  io.rs  lib.rs  os.rs  prelude.rs
vfs/: Cargo.toml
vfs/src/: error.rs  lib.rs  loader.rs  mem.rs  path.rs
vmm/: Cargo.toml  build.rs
vmm/fix-shell/: main.c  memmap.ld  start.S  sys.h  wasm-rt.h
vmm/src/: client.rs  comm.rs  control_monitor.rs  control_pipe_monitor.rs  doorbell.rs  fs.rs  lib.rs  main.rs  monitor.rs  pipe.rs  relay.rs  runtime.rs  start.asm  tcp.rs  vhost.rs  vhost_bindings.h  vmm_pipe.rs  vsock.rs
vmm/tests/: test.rs
vmm/wasm2c/: lib.c  memmap.ld  start.S  wasm-rt-impl.c
wasi/: Cargo.toml  build.rs
xtask/: Cargo.toml
(+9 files in other folders)
