[workspace]
members = [ "common", "vmm", "kernel", "macros" , "user", "arca" , "arcane", "fix", "fix/runtime", "fix/handle", "fix/shell" ]
default-members = [ "common", "vmm", "macros", "arca", "fix/handle" ]

resolver = "2"

[profile.release]
debug = true

[workspace.package]
license = "LGPL-2.1-or-later"
license-file = "LICENSE"
