cargo-features = ["per-package-target"]

[package]
name = "arcade"
version = "0.1.0"
edition = "2024"
forced-target = "x86_64-unknown-none"

[features]
klog-trace = ["kernel/klog-trace"]
klog-debug = ["kernel/klog-debug"]
klog-info = ["kernel/klog-info"]
klog-warn = ["kernel/klog-warn"]
klog-error = ["kernel/klog-error"]
klog-off = ["kernel/klog-off"]
debugcon = ["kernel/debugcon"]

[dependencies]
arca = { path = "../arca" }
kernel = { path = "../kernel" }
common = { path = "../common", default-features = false }
log = "0.4.27"
enumflags2 = "0.7.12"
serde = { version = "1.0.219", default-features = false, features = ["alloc", "derive"] }
chrono = { version = "0.4.41", default-features = false, features = ["alloc", "serde"] }
async-trait = "0.1.88"
serde_bytes = { version = "0.11.17", default-features = false, features = ["alloc"] }
ninep = { version = "0.1.0", path = "../ninep" }
arcane = { version = "0.1.0", path = "../arcane" }

[build-dependencies]
anyhow = "1.0.98"
cc = "1.2.30"
