cargo-features = ["per-package-target"]

[package]
name = "arcade"
version = "0.1.0"
edition = "2024"
forced-target = "x86_64-unknown-none"

[features]
klog-trace = ["kernel/klog-trace"]
klog-debug = ["kernel/klog-debug"]
klog-info = ["kernel/klog-info"]
klog-warn = ["kernel/klog-warn"]
klog-error = ["kernel/klog-error"]
klog-off = ["kernel/klog-off"]
debugcon = ["kernel/debugcon"]
testing-mode = []

[dependencies]
arca = { path = "../arca", features = ["serde"] }
kernel = { path = "../kernel" }
common = { path = "../common", default-features = false }
log = "0.4.27"
serde = { version = "1.0.219", default-features = false, features = ["alloc", "derive"] }
chrono = { version = "0.4.41", default-features = false, features = ["alloc", "serde"] }
serde_bytes = { version = "0.11.17", default-features = false, features = ["alloc"] }
ninep = { version = "0.1.0", path = "../ninep" }
arcane = { version = "0.1.0", path = "../arcane" }
postcard = { version = "1.1.3", features = ["alloc"] }
derive_more = { version = "2.0.1", default-features = false, features = ["full"] }
trait-variant = "0.1.2"
futures = { version = "0.3.31", default-features = false, features = ["alloc", "async-await"] }
vfs = { version = "0.1.0", path = "../vfs" }
chumsky = { version = "0.10.1", default-features = false }
user = { path = "../user", artifact = "bin", target = "x86_64-unknown-none" }
memcached = { path = "../memcached", artifact = "bin", target = "x86_64-unknown-none" }
async-lock = { version = "3.4.1", default-features = false }

[build-dependencies]
anyhow = "1.0.98"
cc = "1.2.30"
