[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["alloc", "snafu/std", "libc"]
alloc = []
thread_local_cache = ["cache"]
core_local_cache = ["macros", "cache"]
cache = []

[dependencies]
log = "0.4.22"
snafu = { version="0.8.5", default-features=false }
macros = { path = "../macros", optional=true }
arca = { path = "../arca" }
libc = { version="0.2.164", optional=true }
elf = { version = "0.7.4", default-features = false }
hashbrown = { version = "0.15.4", features = ["alloc", "core"] }
