[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["alloc", "snafu/std", "libc", "nix"]
alloc = []
thread_local_cache = ["cache"]
core_local_cache = ["macros", "cache"]
cache = []
nix = ["dep:nix"]

[dependencies]
log = "0.4.22"
snafu = { version="0.8.5", default-features=false }
macros = { path = "../macros", optional=true }
arca = { path = "../arca" }
libc = { version="0.2.164", optional=true }
elf = { version = "0.7.4", default-features = false }
hashbrown = { version = "0.15.4", features = ["alloc", "core"] }
derive_more = { version = "2.0.1", default-features = false, features = ["full"] }
nix = { version = "0.30.1", features = ["mman"], optional = true }
async-channel = { version = "2.5.0", default-features = false }
async-lock = { version = "3.4.1", default-features = false }

[target.'cfg(target_os="linux")'.dev-dependencies]
rand = "0.9.2"
