[package]
name = "fix"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel = { path = "../kernel", artifact = "bin", target = "x86_64-unknown-none" }
vmm = { path = "../vmm" }
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"

[build-dependencies]
anyhow = "1.0.98"
cmake = "0.1.54"
include_directory = "0.1.1"
tempfile = "3.20.0"
