cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-none"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel"
harness = false
test = false

[dependencies]
bitfield-struct = "0.7.0"
log = "0.4.21"
time = { version = "0.3.36", default-features = false, features = ["alloc"] }
macros = { path = "../macros" }
common = { path = "../common", default-features = false }
user = { path = "../user", artifact = "bin", target = "x86_64-unknown-none" }
elf = { version = "0.7.4", default-features = false }

[build-dependencies]
anyhow = "1.0.86"
cc = "1.0.97"
glob = "0.3.1"
nasm-rs = "0.3.0"
