cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-none"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
klog-trace = []
klog-debug = []
klog-info = []
klog-warn = []
klog-error = []
klog-off = []
debugcon = []

[[bin]]
name = "kernel"
harness = false
test = false

[dependencies]
bitfield-struct = "0.7.0"
log = "0.4.21"
time = { version = "0.3.36", default-features = false, features = ["alloc"] }
macros = { path = "../macros" }
# common = { path = "../common", default-features = false, features = ["core_local_cache"] }
common = { path = "../common", default-features = false }
defs = { path = "../defs", default-features = false }
user = { path = "../user", artifact = "bin", target = "x86_64-unknown-none" }
arca = { path = "../arca" }
blake3 = { version = "1.8.2", default-features = false }

[build-dependencies]
anyhow = "1.0.86"
cc = "1.0.97"
glob = "0.3.1"
