[package]
name = "ninep"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.41", default-features = false, features = ["alloc", "serde"] }
common = { version = "0.1.0", path = "../common", default-features = false, features = ["alloc"] }
derive_more = { version = "2.0.1", default-features = false, features = ["full"] }
enumflags2 = { version = "0.7.12", features = ["serde"] }
log = "0.4.27"
serde = { version = "1.0.219", default-features = false, features = ["derive", "alloc"] }
serde_bytes = { version = "0.11.17", default-features = false, features = ["alloc"] }
