cargo-features = ["per-package-target"]

[package]
name = "thumbnail-example"
version = "0.1.0"
edition = "2024"
forced-target = "x86_64-unknown-none"

[dependencies]
arca = { version = "0.1.0", path = "../arca", features = ["alloc"] }
qoi = { version = "0.4.1", default-features = false }
user = { version = "0.1.0", path = "../user" }

[build-dependencies]
autotools = "0.2.7"
cc = "1.2.35"
