cargo-features = ["per-package-target"]

[package]
name = "user"
version = "0.1.0"
edition = "2024"
forced-target = "x86_64-unknown-none"

[features]
default = ["allocator"]
allocator = []

[dependencies]
arca = { path = "../arca" }
arcane = { path = "../arcane" }
numtoa = "0.3.1"

[build-dependencies]
cc = "1.2.26"
