cargo-features = ["per-package-target"]

[package]
name = "user"
version = "0.1.0"
edition = "2024"
forced-target = "x86_64-unknown-none"

[features]
default = ["allocator"]
allocator = []

[dependencies]
arca = { path = "../arca" }
arcane = { path = "../arcane" }
bincode = { version = "2.0.1", default-features = false, features = ["derive", "bincode_derive", "serde", "alloc"] }
chumsky = { version = "0.10.1", default-features = false, features = ["lexical", "lexical-numbers"] }
fchashmap = "0.1.3"
fixed-map = { version = "0.9.5", default-features = false, features = ["hashbrown"] }
hashbrown = { version = "0.15.5", features = ["alloc", "core", "serde"] }
numtoa = "0.3.1"
spin = "0.10.0"
talc = "4.4.3"

[build-dependencies]
cc = "1.2.26"
