[package]
name = "vmm"
version = "0.1.0"
edition = "2021"

[features]
klog-trace = ["arcade/klog-trace"]
klog-debug = ["arcade/klog-debug"]
klog-info = ["arcade/klog-info"]
klog-warn = ["arcade/klog-warn"]
klog-error = ["arcade/klog-error"]
klog-off = ["arcade/klog-off"]
debugcon = ["arcade/debugcon"]

[dependencies]
kvm-bindings = { version = "0.13.0" }
kvm-ioctls = "0.23.0"
arca = { path = "../arca" }
common = { path = "../common" }
arcade = { path = "../arcade", artifact = "bin", target = "x86_64-unknown-none" }
fix = { path = "../fix", artifact = "bin", target = "x86_64-unknown-none" }
elf = "0.7.4"
env_logger = "0.11.6"
log = "0.4.25"
rustc-demangle = "0.1.24"
anyhow = "1.0.97"
libc = "0.2.174"
vmm-sys-util = "0.14.0"
ctrlc = "3.4.7"
ninep = { version = "0.1.0", path = "../ninep" }
regex = "1.11.1"
either = "1.15.0"
chumsky = "0.10.1"
vfs = { version = "0.1.0", path = "../vfs" }
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["full"] }
smol = "2.0.2"
nix = { version = "0.30.1", features = ["mman", "socket"] }
vsock = "0.5.1"
thread-priority = "3.0.0"
elevate = "0.6.1"
clap = "4.5.48"

[build-dependencies]
anyhow = "1.0.97"
bindgen = "0.72.0"
