cargo-features = ["per-package-target"]

[package]
name = "evaluator"
version = "0.1.0"
edition = "2024"

[dependencies]
fixhandle = { path = "../handle" }
vmm = {path = "../../vmm"}
clap = { version = "4.5.48", features = ["derive"] }
anyhow = "1.0.97"
env_logger = "0.11.10"
log = "0.4.29"
common = { path = "../../common" }
bytemuck = "1.25.0"

[build-dependencies]
anyhow = "1.0.97"
